@@ -4,17 +4,25 @@ use strict;
 use 5.8.1;
 use parent qw(Plack::Middleware);
 use URI;
-
 our $VERSION = '0.10';
 
 my %ALLOWED = map { $_ => undef } qw(GET HEAD PUT DELETE OPTIONS TRACE CONNECT);
+
+sub new {
+    my $self = shift->SUPER::new(
+        param  => 'x-tunneled-method',
+        (@_ == 1 && ref $_[0] eq 'HASH' ? %{ +shift } : @_),
+    );
+    $self->header($self->header || 'X-HTTP-Method-Override');
+    return $self;
+}
 
 sub call {
     my ($self, $env) = @_;
     my $meth = $env->{'plack.original_request_method'} = $env->{REQUEST_METHOD};
 
     if ($meth && uc $meth eq 'POST') {
-        if (my $override = $env->{HTTP_X_HTTP_METHOD_OVERRIDE}) {
+        if (my $override = $env->{$self->header}) {
             # Google does this.
             $env->{REQUEST_METHOD} = uc $override if exists $ALLOWED{uc $override };
         } elsif (my $q = $env->{QUERY_STRING}) {
@@ -22,12 +30,30 @@ sub call {
             my $uri = URI->new('/');
             $uri->query($q);
             my %form = $uri->query_form;
-            if (my $override = $form{'x-tunneled-method'}) {
+            if (my $override = $form{$self->param}) {
                 $env->{REQUEST_METHOD} = uc $override if exists $ALLOWED{uc $override };
             }
         }
     }
     $self->app->($env);
+}
+
+sub header {
+    my $self = shift;
+    return $self->{header} unless @_;
+    if ($_[0]) {
+        my $key = shift;
+        $key =~ tr/-/_/;
+        return $self->{header} = 'HTTP_' . uc $key;
+    } else {
+        $self->{header} = shift;
+    }
+}
+
+sub param {
+    my $self = shift;
+    return $self->{param} unless @_;
+    return $self->{param} = shift;
 }
 
 1;
@@ -104,6 +130,29 @@ The list of methods you can specify are:
 
 =back
 
+=head2 Configuration
+
+If for some reason you need to use a different query parameter or header to
+override methods, just configure it, like so:
+
+   enable 'MethodOverride', header => 'X-HTTP-Method', param => 'my_method';
+
+The configuration keys are:
+
+=over
+
+=item C<header>
+
+Specifies the HTTP header name to specify the overriding HTTP method. Defaults
+to C<X-HTTP-Method-Override>.
+
+=item C<param>
+
+Specifies the query parameter name to specify the overriding HTTP method.
+Defaults to C<x-tunneled-method>.
+
+=back
+
 =head1 Support
 
 This module is stored in an open L<GitHub
@@ -118,12 +167,13 @@ L<bug-Plack-Middleware-MethodOverride@rt.cpan.org|mailto:bug-Plack-Middleware-Me
 =head1 Acknowledgements
 
 This module gleefully steals from
-L<Catalyst::TraitFor::Request::REST::ForBrowsers> by Dave Rolsky. Thanks to
-L<Aristotle Pagaltzis|http://plasmasturm.org/> for the shove in this
-direction, to L<Matt S Trout|http://www.trout.me.uk/> for suggesting that it
-be implemented as middleware, and to L<Hans Dieter
-Pearcey|http://www.weftsoar.net/> for convincing me not to parse body
-parameters.
+L<Catalyst::TraitFor::Request::REST::ForBrowsers> by Dave Rolsky and the
+original version by Tatsuhiko Miyagawa (which in turn stole from
+L<HTTP::Engine::Middleware::MethodOverride>). Thanks to L<Aristotle
+Pagaltzis|http://plasmasturm.org/> for the shove in this direction, to L<Matt
+S Trout|http://www.trout.me.uk/> for suggesting that it be implemented as
+middleware, and to L<Hans Dieter Pearcey|http://www.weftsoar.net/> for
+convincing me not to parse body parameters.
 
 =head1 Author
 
