@@ -2,3 +2,8 @@ Revision history for Perl extension Plack::Middleware::MethodOverride.
 
 0.10
       - Initial version.
+      - Merged code from Plack core.
+      - Added support for a query parameter to override the method.
+      - Method overriding allowed only via POST.
+      - All currently-supported HTTP methods are allowed.
+
